repastcity.properties: Use messina_strait

--- a/repastcity.properties
+++ b/repastcity.properties
@@ -4,8 +4,8 @@
 LogFile=log_file_location
 
 # The root directory for all GIS data:
-# Demo city:
-GISDataDirectory=./data/gis_data/toy_city/
+# Messina strait:
+GISDataDirectory=./data/gis_data/messina_strait/
 # Larger dataset used for testing
 #GISDataDirectory=./data/gis_data/leeds/
 
