--- a/repastcity.properties
+++ b/repastcity.properties
@@ -11,6 +11,7 @@ GISDataDirectory=./data/gis_data/messina_strait/
 
 # The name of the required shapefiles
 BuildingShapefile=buildings.shp
+FerryTerminalShapefile=ferry_terminals.shp
 RoadShapefile=roads.shp
 
 # The names of some serialised cache files (stored with other GIS data)
